--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/customer_id"
+        android:id="@+id/customer_age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/customer_name"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="ID" />
+        android:hint="Age" />
 
     <EditText
         android:id="@+id/customer_name"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Active Customer"
-        android:layout_below="@+id/customer_id"
+        android:layout_below="@+id/customer_age"
         android:layout_marginTop="20dp"
         android:id="@+id/is_active"
         android:layout_marginStart="20dp"/>
